# RiskMVP

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/docs/: architectural_patterns.md
.github/workflows/: README.md  ci.yml  deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  (+6 more)
contracts/: README.md
docker/: Dockerfile.frontend  Dockerfile.ingestion  Dockerfile.marketdata  Dockerfile.orchestrator  Dockerfile.portfolio  Dockerfile.regulatory  Dockerfile.results  Dockerfile.risk  Dockerfile.worker  docker-compose.yml  nginx-aws.conf  nginx.conf
docs/: DEPLOYMENT_COOKBOOK.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
iprs_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openapi/: openapi.yaml
scripts/: apply-migrations.ps1  apply-migrations.sh  build-images.ps1  build-images.sh  convert_assets_to_positions.py  db_smoke_test.py  demo_runner.ps1  deploy-aws.ps1  deploy-aws.sh  excel_to_position_snapshot.txt  migrate.py  push-ecr.ps1  push-ecr.sh  seed-market-data.py  setup-local.ps1  setup-local.sh  smoke-test.py  verify-deployment.ps1  verify-deployment.sh
services/: README_SERVICES.md
shared/: __init__.py
sql/: 001_mvp_core.sql  002_portfolio_data_services.sql  003_regulatory_analytics.sql  apply_and_verify_002.py  apply_and_verify_003.py  verify_002_schema.sql  verify_003_schema.sql
terraform/: .gitignore  README.md  discovery.tf  ecr.tf  ecs.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
(+256 files in other folders)
